<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.egov</groupId>
    <artifactId>street-vending</artifactId>
    <packaging>jar</packaging>
    <name>street-vending</name>
    <version>2.0.0</version>
    <properties>
    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
</properties>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
    </parent>
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
        <dependency>
           <groupId>org.flywaydb</groupId>
           <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
           <groupId>org.postgresql</groupId>
           <artifactId>postgresql</artifactId>
           <version>42.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- SpringDoc OpenAPI for Spring Boot 3.x -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.3.0</version>
        </dependency>

        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-core</artifactId>
            <version>1.5.18</version>
        </dependency>

        <!-- Egov dependencies -->
        <dependency>
            <groupId>org.egov.services</groupId>
            <artifactId>tracer</artifactId>
            <version>2.9.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.egov.services</groupId>
            <artifactId>digit-models</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
          <groupId>org.egov</groupId>
          <artifactId>mdms-client</artifactId>
          <version>2.9.0-SNAPSHOT</version>
          <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
            <artifactId>owasp-java-html-sanitizer</artifactId>
            <version>20240325.1</version>
        </dependency>

		<!-- For generating Swagger documentation -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>2.4.0</version>
		</dependency>

		<!-- For generating the Swagger UI -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>2.4.0</version>
		</dependency>
		
		<dependency>
	       <groupId>net.javacrumbs.shedlock</groupId>
	       <artifactId>shedlock-spring</artifactId>
	       <version>4.44.0</version>
	    </dependency>

		<dependency>
		    <groupId>net.javacrumbs.shedlock</groupId>
		    <artifactId>shedlock-provider-jdbc-template</artifactId>
		    <version>4.44.0</version>
		</dependency>

		<!-- Feign API-->
		
		<!--<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
			<version>2.0.1.RELEASE</version>
		</dependency>-->
		
		<!--For using encryption service -->
		<dependency>
			<groupId>org.egov</groupId>
			<artifactId>enc-client</artifactId>
			<version>2.9.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.kafka</groupId>
					<artifactId>spring-kafka</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.kafka</groupId>
					<artifactId>kafka-clients</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

    </dependencies>
    <repositories>
        <repository>
            <id>repo.egovernments.org</id>
            <name>eGov ERP Releases Repository</name>
            <url>https://upyog-nexus.niua.org/nexus/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>repo.egovernments.org.snapshots</id>
            <name>eGov ERP Releases Repository</name>
            <url>https://upyog-nexus.niua.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>repo.egovernments.org.public</id>
            <name>eGov Public Repository Group</name>
            <url>https://upyog-nexus.niua.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>repo.digit.org</id>
            <name>eGov DIGIT Releases Repository</name>
            <url>https://upyog-nexus.niua.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>
</project>

